--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,26 +2,28 @@ version: '3'
  
 services:
 
-    smtp:
-        build:
-            context: ./docker/smtp
-        restart: always
-        expose:
-            - "25"
-        volumes:
-            - ./mail-spool:/var/spool/postfix
-            # you can store mail log in a volume 
-            # (but create the file locally before startup)
-            #- ./logs/smtp/maillog:/var/log/maillog
-        environment:
-            SMTP_SERVER: ${SMTP_SERVER}
-            SMTP_PORT: ${SMTP_PORT}
-            SMTP_USERNAME: ${SMTP_USERNAME}
-            SMTP_PASSWORD:  ${SMTP_PASSWORD}
-            SERVER_HOSTNAME: ${SERVER_HOSTNAME}
-            DESTINATION_CONCURRENCY_LIMIT: "1"
-            DESTINATION_RATE_DELAY: "1s"
 
+    smtp:
+        image: docker.io/mailserver/docker-mailserver:latest
+        hostname: ${HOSTNAME}
+        domainname: ${DOMAINNAME}
+        container_name: ${CONTAINER_NAME}
+        env_file: mailserver.env
+    # To avoid conflicts with yaml base-60 float, DO NOT remove the quotation marks.
+    # More information about the mailserver ports:
+    # https://docker-mailserver.github.io/docker-mailserver/edge/config/security/understanding-the-ports/
+        ports:
+            - "25:25"    # SMTP  (explicit TLS => STARTTLS)
+            - "587:587"
+        volumes:
+            - ./maildata:/var/mail
+            - ./mailstate:/var/mail-state
+            - ./maillogs:/var/log/mail
+            - /etc/localtime:/etc/localtime:ro
+            - ./config/:/tmp/docker-mailserver/${SELINUX_LABEL}
+        restart: always
+        stop_grace_period: 1m
+        cap_add: [ "NET_ADMIN", "SYS_PTRACE" ]
 
     php:
         build:
@@ -47,14 +49,17 @@ services:
         depends_on:
             - smtp
     nginx:
-        image: nginx:alpine
+        #image: nginx:alpine
+        build:
+                context: ./docker/nginx
         restart: always
         ports:
-            - 9001:80
+            - "9001:80"
         volumes:
             - ./app:/srv/www/api
             - ./logs/nginx:/var/log/nginx  
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+            - ./cert-new:/etc/nginx/myaccert
         depends_on:
             - php
  
